wallet domain refactoring
